<resources>
    <string name="app_name">Vinder</string>

    <!-- Login/Signup -->
    <string name="startup_button_login">Log in</string>
    <string name="startup_button_signup">Sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign up</string>

    <!-- Profile -->
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_man">Man</string>
    <string name="hint_woman">Woman</string>
    <string name="hint_gender">I am a</string>
    <string name="hint_preferred_gender">Looking for a</string>
    <string name="hint_profile_description">Profile Description</string>
    <string name="button_sign_out">Sign out</string>
    <string name="button_apply">Apply</string>
    <string name="button_clear_matches">Clear Matches</string>
    <string name="error_profile_incomplete">Please complete your profile!</string>

    <!-- Messaging -->
    <string name="no_available_users">No available users</string>
    <string name="send_button_text">Send</string>
    <string name="hint_message">Message</string>
    <string name="no_available_matches">No available matches</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>